fixed alignment issues on about and contact in both mobile and desktop

--- a/css/main.css
+++ b/css/main.css
@@ -185,7 +185,7 @@ textarea {
    }
 
    header img {
-     margin-top: 15%;
+     margin: 15% auto;
      max-height: 75%;
      max-width: 75%;
      display: block;
@@ -195,14 +195,13 @@ textarea {
      display: none;
    }
 
-
    header h2 {
      width: 100%;
      font-family:'Lora', serif;
      font-size: 10.5vw;
      line-height: 1.3em;
      color: #9b9b9b;
-     padding: 15% 0 0 0;
+     padding: 10% 0 0 0;
      text-align: center;
    }
 
@@ -218,20 +217,13 @@ textarea {
    /***** ABOUT ******/
    #about {
      min-height: 1020px;
-
+     width: 96%;
+     padding: 0 7%;
      /*border-bottom: 1px solid #996600; FIGURE OUT HOW TO FIX HEIGHT OF ELEMENT*/
    }
 
-   #about {
-     width: 96%;
-     padding: 0 7%;
 
-   }
 
-   #about .half-width {
-     width: 48%;
-     padding: 0 1% 0 1%;
-   }
 
    #about h2 {
      font-family: 'Lora', serif;
@@ -465,7 +457,7 @@ textarea {
       width: 100%;
     }
     #about, #work, #contact {
-      height: 600px;
+      max-height: 600px;
     }
 
 
@@ -584,15 +576,14 @@ textarea {
   /*********   ABOUT     ***************/
 
   #about {
-    border: 2px solid #996600; /* FIGURE OUT HOW TO FIX HEIGHT OF ELEMENT*/
-    width: 94%;
-    padding-left: 3%;
+    border-bottom: 2px solid #996600; /* FIGURE OUT HOW TO FIX HEIGHT OF ELEMENT*/
+    width: 90%;
+    padding-left: 7%;
   }
 
   #about .half-width {
-    width: 46%;
-    border: 1px solid gold;
-
+    width: 47%;
+    margin-right: 2%;
   }
 
   #about h2 {
@@ -600,7 +591,6 @@ textarea {
     font-size: 36px;
     color: #13132f;
     margin-bottom: 0;
-    border: 1px solid gold;
 
   }
 
@@ -609,7 +599,6 @@ textarea {
     color:#7f7f7f;
     line-height: 2em;
     text-align: justify;
-    border: 1px solid gold;
   }
 
 
@@ -650,6 +639,8 @@ textarea {
 
   #contact {
     background: #ebebeb;
+    border-top: 3px solid #996600; 
+
   }
 
   #contact .full-width {
@@ -706,15 +697,12 @@ textarea {
   }
 
   #contact ul img {
-    padding-right: 48px;
+    padding-right: 10%;
   }
 
   #contact h3{
     color: #13132f;
   }
-
-
-
 
 }
 
